bk_ida/gccida/c2/output_asm_insn
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/output_asm_insn/src/final.c:3583:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v19; // rbp 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/output_asm_insn/src/final.c:3594:4: error: expected ';' after expression
rtx v30; // rsi 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/output_asm_insn/src/final.c:3594:5: error: use of undeclared identifier 'v30'
rtx v30; // rsi 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/output_asm_insn/src/final.c:3595:4: error: expected ';' after expression
rtx v31; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/output_asm_insn/src/final.c:3595:5: error: use of undeclared identifier 'v31'
rtx v31; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/output_asm_insn/src/final.c:3600:4: error: expected ';' after expression
rtx v36; // rsi 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/output_asm_insn/src/final.c:3600:5: error: use of undeclared identifier 'v36'
rtx v36; // rsi 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/output_asm_insn/src/final.c:3601:4: error: expected ';' after expression
rtx v37; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/output_asm_insn/src/final.c:3601:5: error: use of undeclared identifier 'v37'
rtx v37; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/output_asm_insn/src/final.c:3603:4: error: expected ';' after expression
rtx v39; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/output_asm_insn/src/final.c:3603:5: error: use of undeclared identifier 'v39'
rtx v39; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/output_asm_insn/src/final.c:3609:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v45; // rbp 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/output_asm_insn/src/final.c:3615:4: error: expected ';' after expression
rtx paddressp[32]; // [rsp+30h] [rbp-1A8h] BYREF 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/output_asm_insn/src/final.c:3615:5: error: use of undeclared identifier 'paddressp'
rtx paddressp[32]; // [rsp+30h] [rbp-1A8h] BYREF 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/output_asm_insn/src/final.c:3626:14: error: use of undeclared identifier 'paddressp'
v4 = ( int *)paddressp; 
             ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/output_asm_insn/src/final.c:3656:16: error: use of undeclared identifier 'paddressp'
if ( !LODWORD( paddressp[0]) ) 
               ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/output_asm_insn/src/final.c:3686:34: error: use of undeclared identifier 'off_6474F4'
fprintf( ( FILE *)asm_out_file, &off_6474F4[1], ( unsigned int)insn_counter); 
                                 ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/output_asm_insn/src/final.c:3696:7: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
v23 = sch_istable[( unsigned __int8)v10]; 
      ^~~~~~~~~~~
      _sch_istable
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/output_asm_insn/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/output_asm_insn/src/final.c:3700:8: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
if ( ( sch_istable[*( ( unsigned __int8 *)v2 + 2)] & 4) == 0 ) 
       ^~~~~~~~~~~
       _sch_istable
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/output_asm_insn/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/output_asm_insn/src/obj/final.o] Error 1
